--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="img">registro</string>
     <string name="fullname1">Nombre de usuario</string>
     <string name="PR">Repetir contraseña</string>
+    <string name="password_digits">La contraseña debe tener minimo 6 dígitos</string>
+    <string name="missing_parameters">Ingresar parámetros faltantes</string>
 </resources>
