--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
     <string name="PR">Repetir contraseña</string>
     <string name="password_digits">La contraseña debe tener minimo 6 dígitos</string>
     <string name="missing_parameters">Ingresar parámetros faltantes</string>
+    <string name="fullname2">Nombre completo</string>
+    <string name="spaces">Parametros ingresados incorrectos</string>
+    <string name="espacios">Parametros ingresados correctamente (Asegurese de incluir letras y palabras, no solo espacios)</string>
+    <string name="spaes1">Parametros ingresados incorrectamente (Debe incluir letras, palabras o números)</string>
+    <string name="spaces2">Llene los campos vacíos</string>
+    <string name="spaces3">Llene los espacios en blanco</string>
 </resources>
